@@ -1,6 +1,6 @@
 .\"
 .\" Copyright (c) 2023 Roman Žilka <roman.zilka@gmail.com>
-.\" Copyright (c) 2009-2024 Craig Small <csmall@dropbear.xyz>
+.\" Copyright (c) 2009-2025 Craig Small <csmall@dropbear.xyz>
 .\" Copyright (c) 2018-2023 Jim Warner <james.warner@comcast.net>
 .\" Copyright (c) 2011-2012 Sami Kerola <kerolasa@iki.fi>
 .\" Copyright (c) 2003      Albert Cahalan
@@ -11,7 +11,7 @@
 .\" (at your option) any later version.
 .\"
 .\"
-.TH WATCH 1 2024-07-19 procps-ng
+.TH WATCH 1 2025-04-15 procps-ng
 .SH NAME
 watch \- execute a program periodically, showing output fullscreen
 .SH SYNOPSIS
@@ -47,6 +47,12 @@ since the first iteration.
 Freeze updates on \fIcommand\fR error, and exit after a key press. The exit code
 of \fBwatch\fR will be the code \fIcommand\fR exits with. If signal \fBn\fR is
 the cause of \fIcommand\fR termination, the exit code will be 128 + \fBn\fR.
+.TP
+\fB\-f\fR, \fB\-\-follow\fR
+Instead of clearing the screen at each update, \fBwatch\fR will scroll the
+output similiar to how \fItail -f\fR works. This option is not compatible
+with any option tracking the output of the screen, such as the
+\fB\-\-differences\fR, \fB\-\-chgexit\fR and \fB\-\-eqexit\fR options.
 .TP
 \fB\-g\fR, \fB\-\-chgexit\fR
 Exit when the visible output of \fIcommand\fR changes. Changes that are off
