@@ -7,6 +7,7 @@ procps-ng-NEXT
   * sysctl: Return error if EPERM or EISDIR                merge !228
   * w: Add terminal mode to show all terminal sessions     issue #375
   * w: Use process TTY as backup for user TTY              Debian #1080335
+  * watch: Add --follow option                             Debian #469156
 
 procps-ng-4.0.5
 ---------------
